# LR-0-_parser

./: CMakeLists.txt  driver.cpp  install.sh  readme.md  run.sh  run_driver.sh
src/: CMakeLists.txt  parser.cpp  parser.hpp
src/common/: CMakeLists.txt  debugging.hpp  syntax.hpp
src/parsing_print/: CMakeLists.txt  parsing_print.cpp  parsing_print.hpp
src/parsing_table/: CMakeLists.txt  parsing_table.cpp  parsing_table.hpp
src/tokenizator/: CMakeLists.txt  token_arrays.cpp  tokenizator.cpp  tokenizator.hpp  tokenizator.l  tokenizator.txt
tests/: CMakeLists.txt  test_main.cpp  tests.cpp  tests.hpp
